Fix gap in between navigation and content

--- a/client/modules/groups/group/group.component.scss
+++ b/client/modules/groups/group/group.component.scss
@@ -1,3 +1,3 @@
 .container {
-    margin-top: 120px;
+    margin-top: 10px;
   }
